--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
         <div class="logo">
           <img src="img/xxl-logo.jpg" alt="" />
         </div>
-        <ul class="menu-links">
-          <li>Home</li>
-          <li>News</li>
-          <li>Music</li>
-          <li>Videos</li>
-          <li>Shop</li>
-        </ul>
+        <div class="menu-links">
+          <ul>
+            <li>Home</li>
+            <li>News</li>
+            <li>Music</li>
+            <li>Videos</li>
+            <li>Shop</li>
+          </ul>
+        </div>
         <div class="search"><i class="fa fa-search"></i></div>
         <div class="cart"><i class="fa fa-shopping-cart"></i></div>
       </nav>
