--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
     <div class="overlay second"></div>
     <div class="overlay third"></div>
 
-    <div class="container">
-      <nav class="nav">
-        <div class="logo">
-          <img src="img/xxl-logo.jpg" alt="" />
-        </div>
+    <div class="wrapper">
+      <div class="nav">
+        <div class="logo"><img src="./img/xxl-logo.jpg" alt="" /></div>
         <div class="menu-links">
           <ul>
             <li>Home</li>
@@ -37,11 +35,12 @@
         </div>
         <div class="search"><i class="fa fa-search"></i></div>
         <div class="cart"><i class="fa fa-shopping-cart"></i></div>
-      </nav>
+      </div>
     </div>
+
     <hr class="border-bottom" />
 
-    <section class="content">
+    <div class="content">
       <div class="text">
         <p class="subtitle">The Authority In</p>
         <h1 class="title">
@@ -72,6 +71,8 @@
       <div class="img-2"></div>
 
       <div class="img-3"></div>
-    </section>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
